--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "express": "4.18.2",
     "jsonwebtoken": "9.0.2",
     "mongoose": "^9.2.1",
+    "multer": "^2.0.2",
     "nodemailer": "^8.0.1",
-    "uuid": "9.0.0"
+    "uuid": "9.0.0",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "node server.js",
